Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "homepage": "https://vellan-nada.github.io/vellan-personal-website/",
+  "homepage": "https://vellannada.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
